--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     </section>
 
     <!-- Nueva gran botón -->
-    <a href="#pago" class="big-btn">Pago de reserva </a>
+    <a href="#pay" class="big-btn">Pago de reserva </a>
 
     <footer>
       <p>© Brega 2025 — <a href="mailto:hi@brega.app">hi@brega.app</a></p>
