--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+
 <html lang="es">
 <head>
   <meta charset="utf-8" />
@@ -31,86 +32,119 @@
       text-align: center;
       margin: 24px;
     }
-    header img { height:56px; display:block; margin:auto; }
+    header img {
+      max-width: 180px;
+      height: auto;
+      display: block;
+      margin: auto;
+    }
     .section-sub { color: var(--muted); }
-    .orn { margin-top:12px; }
-
-    .cta-row {
-      display: flex;
-      justify-content: center;
-      gap: 12px;
-      margin: 30px 0;
-      flex-wrap: wrap;
-    }
-    .btn {
-      padding: 14px 24px;
-      border-radius: 12px;
-      cursor: pointer;
-      font-size: 15px;
-      display: inline-flex;
-      align-items: center;
-      font-weight: 700;
-      text-decoration: none;
-      transition: 0.3s;
-    }
-    .btn img { margin-right: 6px; height:20px; }
-    .btn.primary {
-      background: linear-gradient(90deg,var(--accent),var(--accent-2));
-      color:#fff;
-    }
-    .btn.secondary {
-      background: transparent;
-      border: 1px solid #ccc;
-      color: #222;
-    }
-    .btn:hover { opacity: 0.9; transform: translateY(-2px); }
-
-    .map-wrap { text-align: center; margin: 20px; }
-    .map-frame iframe {
-      width: 100%;
-      height: 300px;
-      border: 0;
-      border-radius: 14px;
-      box-shadow: 0 4px 18px rgba(0,0,0,0.1);
+    .orn {
+      max-width: 120px;
+      margin: 12px auto;
+      height: auto;
+      display: block;
     }
 
-    section {
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 0 20px;
-      text-align: center;
-    }
-    .features {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 24px;
-      margin-top: 30px;
-    }
-    .card {
-      background: var(--card);
-      padding: 20px;
-      border-radius: 14px;
-      border: 1px solid #eee;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-    }
+```
+.cta-row {
+  display: flex;
+  justify-content: center;
+  gap: 12px;
+  margin: 30px 0;
+  flex-wrap: wrap;
+}
+.btn {
+  padding: 14px 24px;
+  border-radius: 12px;
+  cursor: pointer;
+  font-size: 15px;
+  display: inline-flex;
+  align-items: center;
+  font-weight: 700;
+  text-decoration: none;
+  transition: 0.3s;
+}
+.btn img {
+  width: 20px;
+  height: auto;
+  margin-right: 6px;
+}
+.btn.primary {
+  background: linear-gradient(90deg,var(--accent),var(--accent-2));
+  color:#fff;
+}
+.btn.secondary {
+  background: transparent;
+  border: 1px solid #ccc;
+  color: #222;
+}
+.btn:hover { opacity: 0.9; transform: translateY(-2px); }
 
-    .big-btn {
-      display:block;
-      margin: 40px auto;
-      padding: 18px 28px;
-      font-size: 18px;
-      font-weight: 800;
-      text-align:center;
-      border-radius: 14px;
-      background: linear-gradient(90deg,var(--accent),var(--accent-2));
-      color:#fff;
-      text-decoration:none;
-      max-width: 320px;
-    }
+.map-wrap { text-align: center; margin: 20px; }
+.map-frame iframe {
+  width: 100%;
+  aspect-ratio: 16/9;
+  border: 0;
+  border-radius: 14px;
+  box-shadow: 0 4px 18px rgba(0,0,0,0.1);
+}
 
-    footer p { font-size: 14px; color: var(--muted); }
-    footer a { color: var(--accent); text-decoration: underline; }
-    footer a:hover { opacity:0.8; }
+section {
+  max-width: 900px;
+  margin: 40px auto;
+  padding: 0 20px;
+  text-align: center;
+}
+.features {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 24px;
+  margin-top: 30px;
+}
+.card {
+  background: var(--card);
+  padding: 20px;
+  border-radius: 14px;
+  border: 1px solid #eee;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+}
+
+.big-btn {
+  display:block;
+  margin: 40px auto;
+  padding: 18px 28px;
+  font-size: 18px;
+  font-weight: 800;
+  text-align:center;
+  border-radius: 14px;
+  background: linear-gradient(90deg,var(--accent),var(--accent-2));
+  color:#fff;
+  text-decoration:none;
+  max-width: 320px;
+}
+
+footer p { font-size: 14px; color: var(--muted); }
+footer a { color: var(--accent); text-decoration: underline; }
+footer a:hover { opacity:0.8; }
+
+/* Footer logos */
+.footer-logos img {
+  max-height: 48px;
+  width: auto;
+  object-fit: contain;
+  margin: auto;
+  display: block;
+}
+.footer-logos {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  flex-wrap: wrap;
+}
+```
+
   </style>
 </head>
 <body>
@@ -122,68 +156,60 @@
       <img src="public/img/up_ornament.png" class="orn" alt="adorno de cabecera" onerror="this.style.display='none'"/>
     </header>
 
-    <div class="cta-row" role="navigation" aria-label="Acciones principales">
-      <a href="https://real-dogsled-d8a.notion.site/27d9bf7f509581e69834f7305376bb90?pvs=105" 
-         class="btn primary" target="_blank" rel="noopener noreferrer">
-        <img src="public/img/ypgsf.png" alt="Icono añadir"/> Tengo un barco
-      </a>
-      <a href="https://real-dogsled-d8a.notion.site/2799bf7f50958177b63adb311435ceb9" 
-         class="btn secondary" target="_blank" rel="noopener noreferrer">
-        <img src="public/img/look.png" alt="Icono buscar"/> Busco un barco
-      </a>
+```
+<div class="cta-row" role="navigation" aria-label="Acciones principales">
+  <a href="https://real-dogsled-d8a.notion.site/27d9bf7f509581e69834f7305376bb90?pvs=105" 
+     class="btn primary" target="_blank" rel="noopener noreferrer">
+    <img src="public/img/ypgsf.png" alt="Icono añadir"/> Tengo un barco
+  </a>
+  <a href="https://real-dogsled-d8a.notion.site/2799bf7f50958177b63adb311435ceb9" 
+     class="btn secondary" target="_blank" rel="noopener noreferrer">
+    <img src="public/img/look.png" alt="Icono buscar"/> Busco un barco
+  </a>
+</div>
+
+<div class="map-wrap">
+  <div class="map-frame">
+    <iframe
+      class="map-iframe"
+      src="https://www.google.com/maps?q=36.5,24.0&z=9&output=embed"
+      title="Mapa de Brega — ubicaciones">
+    </iframe>
+  </div>
+</div>
+
+<section>
+  <h2>¿Por qué Brega?</h2>
+  <div class="features">
+    <div class="card">
+      <h3>Para propietarios de embarcaciones</h3>
+      <p>Gana con tu embarcación sin intermediarios, gestiona tu calendario y encuentra pasajeros o compañeros para tu próximo viaje.</p>
     </div>
-
-    <div class="map-wrap">
-      <div class="map-frame">
-        <iframe
-          class="map-iframe"
-          src="https://www.google.com/maps?q=36.5,24.0&z=9&output=embed"
-          title="Mapa de Brega — ubicaciones">
-        </iframe>
-      </div>
+    <div class="card">
+      <h3>Para quienes alquilan</h3>
+      <p>Busca embarcaciones cercanas, elige el formato que prefieras —un paseo corto, pesca, un atardecer romántico o una aventura en el mar.</p>
     </div>
+  </div>
+</section>
 
-    <section>
-      <h2>¿Por qué Brega?</h2>
-      <div class="features">
-        <div class="card">
-          <h3>Para propietarios de embarcaciones</h3>
-          <p>Gana con tu embarcación sin intermediarios, gestiona tu calendario y encuentra pasajeros o compañeros para tu próximo viaje.</p>
-        </div>
-        <div class="card">
-          <h3>Para quienes alquilan</h3>
-          <p>Busca embarcaciones cercanas, elige el formato que prefieras —un paseo corto, pesca, un atardecer romántico o una aventura en el mar.</p>
-        </div>
-      </div>
-    </section>
+<section>
+  <h2>Cómo funciona</h2>
+  <p>1. Elige tu rol — propietario o cliente.<br>
+     2. Rellena el formulario sencillo.<br>
+     3. Conecta directamente con capitanes o pasajeros.<br>
+     4. ¡Zarpa — así de fácil!</p>
+</section>
 
-    <section>
-      <h2>Cómo funciona</h2>
-      <p>1. Elige tu rol — propietario o cliente.<br>
-         2. Rellena el formulario sencillo.<br>
-         3. Conecta directamente con capitanes o pasajeros.<br>
-         4. ¡Zarpa — así de fácil!</p>
-    </section>
+<!-- Nueva gran botón -->
+<a href="https://bo-gavriles.github.io/brega/pay" class="big-btn">Pago de reserva </a>
 
-    <!-- Nueva gran botón -->
-    <a href="https://bo-gavriles.github.io/brega/pay" class="big-btn">Pago de reserva </a>
-
-     <footer>   
-<!-- Footer с логобордом — Tailwind -->
+<!-- Footer -->
 <footer class="bg-black text-white">
   <div class="max-w-6xl mx-auto px-4 py-6">
-    <nav aria-label="Логоборд" class="flex items-center justify-center gap-6">
-      <a href="#" class="block flex-1 max-w-[150px]">
-        <img src="/public/img/uy.png" alt="UY" class="w-full h-auto object-contain mx-auto" loading="lazy">
-      </a>
-
-      <a href="#" class="block flex-1 max-w-[150px]">
-        <img src="/public/img/mp.png" alt="MP" class="w-full h-auto object-contain mx-auto" loading="lazy">
-      </a>
-
-      <a href="#" class="block flex-1 max-w-[150px]">
-        <img src="/public/img/llogo.png" alt="LLogo" class="w-full h-auto object-contain mx-auto" loading="lazy">
-      </a>
+    <nav aria-label="Logos" class="footer-logos">
+      <a href="#"><img src="/public/img/uy.png" alt="UY" loading="lazy"></a>
+      <a href="#"><img src="/public/img/mp.png" alt="MP" loading="lazy"></a>
+      <a href="#"><img src="/public/img/llogo.png" alt="LLogo" loading="lazy"></a>
     </nav>
 
     <p class="mt-4 text-center text-sm text-gray-400">
@@ -192,12 +218,16 @@
   </div>
 </footer>
 
-<script>
-  document.getElementById('year').textContent = new Date().getFullYear();
-</script>
+<p style="text-align:center; font-size:14px; color:#777;">
+  © Brega 2025 — <a href="mailto:hi@brega.app">hi@brega.app</a>
+</p>
+```
 
-      <p>© Brega 2025 — <a href="mailto:hi@brega.app">hi@brega.app</a></p>
-    </footer>
   </div>
+
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
+
 </body>
 </html>
