--- a/index.html
+++ b/index.html
@@ -14,103 +14,79 @@
       --accent:#1fb6ff;
       --accent-2:#7c3aed;
       --radius:16px;
-      font-family: 'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
     }
-    *{box-sizing:border-box}
+    * { box-sizing:border-box; }
     body {
-      margin: 0;
-      background: #ffffff;
-      color: #222;
-      font-family: 'Inter', sans-serif;
+      margin:0; padding:0;
+      font-family:'Inter', sans-serif;
+      background:#fff; color:#222;
     }
-    h1, h2, h3 {
-      font-weight: 700;
-      margin: 0.6em 0;
-    }
-    header, footer {
-      text-align: center;
-      margin: 24px;
-    }
+    h1,h2,h3 { font-weight:700; margin:0.6em 0; }
+    header { text-align:center; margin:24px; }
     header img { height:56px; display:block; margin:auto; }
     .section-sub { color: var(--muted); }
     .orn { margin-top:12px; }
 
     .cta-row {
-      display: flex;
-      justify-content: center;
-      gap: 12px;
-      margin: 30px 0;
-      flex-wrap: wrap;
+      display:flex; justify-content:center; gap:12px;
+      margin:30px 0; flex-wrap:wrap;
     }
     .btn {
-      padding: 14px 24px;
-      border-radius: 12px;
-      cursor: pointer;
-      font-size: 15px;
-      display: inline-flex;
-      align-items: center;
-      font-weight: 700;
-      text-decoration: none;
-      transition: 0.3s;
+      padding:14px 24px; border-radius:12px; cursor:pointer;
+      font-size:15px; display:inline-flex; align-items:center;
+      font-weight:700; text-decoration:none; transition:0.3s;
     }
-    .btn img { margin-right: 6px; height:20px; }
-    .btn.primary {
-      background: linear-gradient(90deg,var(--accent),var(--accent-2));
-      color:#fff;
-    }
-    .btn.secondary {
-      background: transparent;
-      border: 1px solid #ccc;
-      color: #222;
-    }
-    .btn:hover { opacity: 0.9; transform: translateY(-2px); }
+    .btn img { margin-right:6px; height:20px; }
+    .btn.primary { background:linear-gradient(90deg,var(--accent),var(--accent-2)); color:#fff; }
+    .btn.secondary { background:transparent; border:1px solid #ccc; color:#222; }
+    .btn:hover { opacity:0.9; transform:translateY(-2px); }
 
-    .map-wrap { text-align: center; margin: 20px; }
+    .map-wrap { text-align:center; margin:20px; }
     .map-frame iframe {
-      width: 100%;
-      height: 300px;
-      border: 0;
-      border-radius: 14px;
-      box-shadow: 0 4px 18px rgba(0,0,0,0.1);
+      width:100%; height:300px; border:0;
+      border-radius:14px; box-shadow:0 4px 18px rgba(0,0,0,0.1);
     }
 
-    section {
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 0 20px;
-      text-align: center;
-    }
+    section { max-width:900px; margin:40px auto; padding:0 20px; text-align:center; }
     .features {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 24px;
-      margin-top: 30px;
+      display:grid;
+      grid-template-columns:repeat(auto-fit, minmax(250px,1fr));
+      gap:24px; margin-top:30px;
     }
     .card {
-      background: var(--card);
-      padding: 20px;
-      border-radius: 14px;
-      border: 1px solid #eee;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      background:var(--card); padding:20px;
+      border-radius:14px; border:1px solid #eee;
+      box-shadow:0 2px 8px rgba(0,0,0,0.05);
     }
 
     .big-btn {
-      display:block;
-      margin: 40px auto;
-      padding: 18px 28px;
-      font-size: 18px;
-      font-weight: 800;
-      text-align:center;
-      border-radius: 14px;
-      background: linear-gradient(90deg,var(--accent),var(--accent-2));
-      color:#fff;
-      text-decoration:none;
-      max-width: 320px;
+      display:block; margin:40px auto;
+      padding:18px 28px; font-size:18px; font-weight:800;
+      text-align:center; border-radius:14px;
+      background:linear-gradient(90deg,var(--accent),var(--accent-2));
+      color:#fff; text-decoration:none; max-width:320px;
     }
 
-    footer p { font-size: 14px; color: var(--muted); }
-    footer a { color: var(--accent); text-decoration: underline; }
-    footer a:hover { opacity:0.8; }
+    footer {
+      margin-top:60px; padding:20px; font-size:14px;
+      background:#fff; color:#777;
+      text-align:center;
+    }
+
+    .footer-logos {
+      display:flex; justify-content:center; align-items:center;
+      gap:24px; flex-wrap:wrap; margin-bottom:12px;
+    }
+    .footer-logos img {
+      max-height:48px; max-width:120px;
+      width:auto; height:auto; object-fit:contain;
+    }
+
+    @media (max-width:768px) {
+      .cta-row { flex-direction:column; gap:12px; }
+      .btn { width:100%; min-width:auto; }
+      .footer-logos img { max-height:36px; max-width:100px; }
+    }
   </style>
 </head>
 <body>
@@ -123,23 +99,17 @@
     </header>
 
     <div class="cta-row" role="navigation" aria-label="Acciones principales">
-      <a href="https://real-dogsled-d8a.notion.site/27d9bf7f509581e69834f7305376bb90?pvs=105" 
-         class="btn primary" target="_blank" rel="noopener noreferrer">
+      <a href="https://real-dogsled-d8a.notion.site/27d9bf7f509581e69834f7305376bb90?pvs=105" class="btn primary" target="_blank" rel="noopener noreferrer">
         <img src="public/img/ypgsf.png" alt="Icono añadir"/> Tengo un barco
       </a>
-      <a href="https://real-dogsled-d8a.notion.site/2799bf7f50958177b63adb311435ceb9" 
-         class="btn secondary" target="_blank" rel="noopener noreferrer">
+      <a href="https://real-dogsled-d8a.notion.site/2799bf7f50958177b63adb311435ceb9" class="btn secondary" target="_blank" rel="noopener noreferrer">
         <img src="public/img/look.png" alt="Icono buscar"/> Busco un barco
       </a>
     </div>
 
     <div class="map-wrap">
       <div class="map-frame">
-        <iframe
-          class="map-iframe"
-          src="https://www.google.com/maps?q=36.5,24.0&z=9&output=embed"
-          title="Mapa de Brega — ubicaciones">
-        </iframe>
+        <iframe src="https://www.google.com/maps?q=36.5,24.0&z=9&output=embed" title="Mapa de Brega — ubicaciones"></iframe>
       </div>
     </div>
 
@@ -165,32 +135,20 @@
          4. ¡Zarpa — así de fácil!</p>
     </section>
 
-    <!-- Nueva gran botón -->
-    <a href="https://bo-gavriles.github.io/brega/pay" class="big-btn">Pago de reserva </a>
-
-    <footer>
-<!-- Nueva gran botón -->
-<a href="https://bo-gavriles.github.io/brega/pay" class="big-btn">Pago de reserva </a>
-
-<!-- Footer -->
-<footer class="bg-black text-white">
-  <div class="max-w-6xl mx-auto px-4 py-6">
-    <nav aria-label="Logos" class="footer-logos">
-      <a href="#"><img src="/public/img/uy.png" alt="UY" loading="lazy"></a>
-      <a href="#"><img src="/public/img/mp.png" alt="MP" loading="lazy"></a>
-      <a href="#"><img src="/public/img/llogo.png" alt="LLogo" loading="lazy"></a>
-    </nav>
-
-    <p class="mt-4 text-center text-sm text-gray-400">
-      © <span id="year"></span> Brega.app con Mercado Pago en Uruguay <a href="mailto:hi@brega.app">hi@brega.app</a>
-    </p>
+    <a href="https://bo-gavriles.github.io/brega/pay" class="big-btn">Pago de reserva</a>
   </div>
-</footer>
-  </div>
+
+  <footer>
+    <div class="footer-logos">
+      <a href="#"><img src="/public/img/uy.png" alt="UY"></a>
+      <a href="#"><img src="/public/img/mp.png" alt="MP"></a>
+      <a href="#"><img src="/public/img/llogo.png" alt="LLogo"></a>
+    </div>
+    <p>© <span id="year"></span> Brega.app con Mercado Pago en Uruguay — <a href="mailto:hi@brega.app">hi@brega.app</a></p>
+  </footer>
 
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
-
 </body>
 </html>
