--- a/pay.html
+++ b/pay.html
@@ -115,7 +115,7 @@
 
           <div class="section">
             <h3 style="margin:0 0 8px 0">Si algo sale mal</h3>
-            <p class="small">Escríbenos a <a href="mailto:support@brega.app" class="link">support@brega.app</a> o al chat — resolveremos el problema y, si es necesario, iniciaremos el reembolso.</p>
+            <p class="small">Escríbenos a <a href="mailto:hi@brega.app" class="link">hi@brega.app</a> o al chat — resolveremos el problema y, si es necesario, iniciaremos el reembolso.</p>
           </div>
         </article>
       </main>
