--- a/pay.html
+++ b/pay.html
@@ -143,7 +143,7 @@
 
             <a class="btn secondary" href="#contact" aria-label="Contactar soporte">Contactar soporte</a>
 
-            <div style="font-size:13px;color:var(--muted);margin-top:6px">Al hacer clic en «Pagar» aceptas nuestra <a href="#terms" class="link">política de reembolso</a> y <a href="#terms" class="link">términos de uso</a>.</div>
+            <div style="font-size:13px;color:var(--muted);margin-top:6px">Al hacer clic en «Pagar» aceptas nuestra <a href="/refund-es.html" class="link">política de reembolso</a> y a href="/terms-es.html" class="link">términos de uso</a>.</div>
           </div>
 
           <footer>
