--- a/index.html
+++ b/index.html
@@ -145,6 +145,11 @@
       <a href="#"><img src="/public/img/llogo.png" alt="LLogo"></a>
     </div>
     <p>© <span id="year"></span> Brega.app con Mercado Pago en Uruguay — <a href="mailto:hi@brega.app">hi@brega.app</a></p>
+      <div style="font-size:13px;color:var(--muted);margin-top:6px">
+    Al hacer clic en «Pagar» aceptas nuestra 
+    <a href="/refund-es.html" class="link">política de reembolso</a> y 
+    <a href="/terms-es.html" class="link">términos de uso</a>.
+  </div>
   </footer>
 
   <script>
