--- a/refund-es.html
+++ b/refund-es.html
@@ -1,24 +1,85 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Política de comisión por selección — Brega</title>
+  <meta name="description" content="Política de comisión por selección de Brega: condiciones de cobro, devolución y procedimiento en caso de cancelaciones o incumplimientos." />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    body { font-family: Arial, sans-serif; color:#111; background:#fff; margin:0; padding:0; }
-    main { max-width:900px; margin:28px auto; padding:20px; line-height:1.5; }
-    h1 { font-size:1.6rem; margin-bottom:8px; color:#0b3b5a; }
-    h2 { font-size:1.1rem; margin-top:20px; color:#0b3b5a; }
-    p, li { font-size:0.98rem; color:#222; }
-    ul { margin-left:1.2rem; }
-    .note { background:#f5f7fa; border-left:4px solid #cfe3f5; padding:12px; margin:12px 0; }
-    footer { margin-top:28px; font-size:0.9rem; color:#555; }
+    body {
+      font-family: 'Inter', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #fff;
+      color: #222;
+      line-height: 1.6;
+    }
+    header {
+      text-align: center;
+      padding: 40px 20px 20px;
+      background: #f9f9f9;
+      border-bottom: 1px solid #eee;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 28px;
+      color: #0b3b5a;
+    }
+    header p {
+      margin: 8px 0 0;
+      color: #555;
+    }
+    main {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+    h2 {
+      margin-top: 32px;
+      font-size: 22px;
+      font-weight: 600;
+      color: #1e1e1e;
+    }
+    p, li {
+      margin: 12px 0;
+      font-size: 16px;
+    }
+    ul {
+      margin-left: 1.2rem;
+    }
+    .note {
+      background: #f5f7fa;
+      border-left: 4px solid #cfe3f5;
+      padding: 12px;
+      margin: 12px 0;
+      font-size: 14px;
+      color: #555;
+    }
+    footer {
+      margin-top: 60px;
+      padding: 20px;
+      text-align: center;
+      font-size: 14px;
+      color: #777;
+      border-top: 1px solid #eee;
+    }
+    a {
+      color: #1e90ff;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
-  <main>
+  <header>
     <h1>Política de comisión por selección de embarcación</h1>
+    <p>Brega — condiciones de cobro y devolución</p>
+  </header>
 
+  <main>
     <p><strong>Fecha de entrada en vigor:</strong> en el momento de su publicación en el sitio web.</p>
 
     <h2>1. Objeto</h2>
@@ -41,43 +102,47 @@
       <li>Notificar de inmediato a la otra parte sobre el incidente.</li>
       <li>Buscar una alternativa equivalente (embarcación o capitán) que cumpla con los criterios de la solicitud en un plazo razonable.</li>
       <li>Si se encuentra y acuerda una alternativa entre las partes, el servicio inicial se considerará completado y la Comisión será retenida por Brega como remuneración por los servicios prestados.</li>
-      <li>Si no se encuentra una alternativa en un plazo razonable, Brega devolverá la Comisión pagada por la parte afectada (véase sección 5).</li>
+      <li>Si no se encuentra una alternativa en un plazo razonable, Brega devolverá la Comisión pagada por la parte afectada.</li>
     </ul>
 
     <div class="note">
-      <strong>Nota:</strong> Se entiende por “plazo razonable” el período suficiente para realizar la búsqueda de una alternativa adecuada, considerando los plazos de la solicitud; de ser necesario, los plazos serán acordados con el usuario en el momento de la solicitud.
+      <strong>Nota:</strong> Se entiende por “plazo razonable” el período suficiente para realizar la búsqueda de una alternativa adecuada; de ser necesario, los plazos serán acordados con el usuario en el momento de la solicitud.
     </div>
 
     <h2>5. Condiciones y procedimiento de devolución</h2>
     <ul>
-      <li>La devolución de la Comisión se realizará únicamente a la parte afectada, es decir, aquella cuyo interés haya sido perjudicado por la cancelación o falta de respuesta de la contraparte y para la cual no se haya encontrado una alternativa equivalente.</li>
-      <li>El importe de la devolución será igual a la Comisión abonada por la parte afectada (990 UYU), descontando los cargos bancarios o de pago aplicables, en caso de existir y ser especificados.</li>
-      <li>Brega decidirá sobre la devolución tras verificar las circunstancias de la cancelación. Brega podrá solicitar documentación o correspondencia que justifique la reclamación.</li>
-      <li>El plazo de tramitación de la devolución será de hasta 5 (cinco) días hábiles desde la aprobación de la misma por Brega; el plazo de acreditación dependerá del sistema de pago y del banco receptor.</li>
+      <li>La devolución de la Comisión se realizará únicamente a la parte afectada.</li>
+      <li>El importe de la devolución será igual a la Comisión abonada por la parte afectada, descontando los cargos aplicables.</li>
+      <li>Brega decidirá sobre la devolución tras verificar las circunstancias de la cancelación.</li>
+      <li>El plazo de tramitación será de hasta 5 días hábiles desde la aprobación de la devolución.</li>
     </ul>
 
     <h2>6. Excepciones y fuerza mayor</h2>
-    <p>La devolución de la Comisión podrá verse limitada o no realizarse en casos de fuerza mayor, incumplimientos graves por parte del solicitante (fraude, provisión de información falsa) o cualquier otra circunstancia indicada expresamente en las normas de la plataforma. Todos los casos en disputa serán analizados de forma individual.</p>
+    <p>La devolución podrá verse limitada o no realizarse en casos de fuerza mayor o incumplimientos graves.</p>
 
     <h2>7. Responsabilidad</h2>
-    <p>Brega presta servicios de selección y coordinación. La plataforma no es arrendadora de la embarcación y no se responsabiliza de la calidad del servicio proporcionado por el capitán, de la seguridad de la embarcación ni del cumplimiento de las obligaciones contractuales del capitán con el cliente. Las cuestiones relacionadas con la ejecución del contrato de prestación del servicio serán resueltas directamente entre cliente y capitán, contando con la asistencia de Brega en la medida de sus posibilidades.</p>
+    <p>Brega presta servicios de selección y coordinación. No es arrendadora de la embarcación ni responsable de la calidad del servicio proporcionado por el capitán.</p>
 
     <h2>8. Disputas y resolución</h2>
-    <p>Cualquier conflicto derivado de la aplicación de la presente política se resolverá mediante negociación. En caso de no llegar a un acuerdo, las partes podrán acudir a la jurisdicción competente según lo indicado en el acuerdo de usuario de la plataforma Brega.</p>
+    <p>Cualquier conflicto se resolverá mediante negociación o, en caso contrario, en la jurisdicción competente según el acuerdo de usuario.</p>
 
     <h2>9. Contacto</h2>
-    <p>Para consultas relacionadas con la comisión o devoluciones, contactar a:</p>
     <ul>
       <li>Email: <a href="mailto:hi@brega.app">hi@brega.app</a></li>
       <li>Teléfono / WhatsApp: <a href="tel:+59896744421">+598 967 444 21</a></li>
     </ul>
 
     <h2>10. Aceptación</h2>
-    <p>El usuario acepta y acuerda los términos de la presente política en el momento del pago de la Comisión a través del mecanismo de pago disponible en la plataforma Brega.</p>
-
-    <footer>
-      <p>© Brega — política de comisión por selección de embarcación. Todos los derechos reservados.</p>
-    </footer>
+    <p>El usuario acepta los términos de la presente política al pagar la Comisión a través de la plataforma Brega.</p>
   </main>
+
+  <footer>
+    © <span id="year"></span> Brega.app — 
+    <a href="mailto:hi@brega.app">hi@brega.app</a>
+  </footer>
+
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
