--- a/refund-es.html
+++ b/refund-es.html
@@ -130,6 +130,9 @@
     <ul>
       <li>Email: <a href="mailto:hi@brega.app">hi@brega.app</a></li>
       <li>Teléfono / WhatsApp: <a href="tel:+59896744421">+598 967 444 21</a></li>
+      <li>RUT: 220517020014  <li>
+      <li>N° de Empresa: 0000008982125<li>
+      <li>Jurisdicción: Uruguay  <li>
     </ul>
 
     <h2>10. Aceptación</h2>
