--- a/terms-es.html
+++ b/terms-es.html
@@ -88,7 +88,17 @@
     <h2>5. Soporte y resolución de conflictos</h2>
     <p>En caso de inconvenientes, Brega actuará como intermediario entre el cliente y el capitán.  
     Podremos ofrecer soluciones alternativas o aplicar la <a href="/refund-es.html">Política de reembolso</a> correspondiente.</p>
+        
+    <h2>6. Contacto</h2>
+    <ul>
+      <li>Email: <a href="mailto:hi@brega.app">hi@brega.app</a></li>
+      <li>Teléfono / WhatsApp: <a href="tel:+59896744421">+598 967 444 21</a></li>
+      <li>RUT: 220517020014  <li>
+      <li>N° de Empresa: 0000008982125<li>
+      <li>Jurisdicción: Uruguay  <li>
+    </ul>
   </main>
+  
 
   <footer>
     </div>
