--- a/pay.html
+++ b/pay.html
@@ -143,7 +143,7 @@
 
             <a class="btn secondary" href="#contact" aria-label="Contactar soporte">Contactar soporte</a>
 
-            <div style="font-size:13px;color:var(--muted);margin-top:6px">Al hacer clic en «Pagar» aceptas nuestra <a href="/refund-es.html" class="link">política de reembolso</a> y a href="/terms-es.html" class="link">términos de uso</a>.</div>
+            <div style="font-size:13px;color:var(--muted);margin-top:6px">Al hacer clic en «Pagar» aceptas nuestra <a href="/refund-es.html" class="link">política de reembolso</a> y <a href="/terms-es.html" class="link">términos de uso</a>.</div>
           </div>
 
           <footer>
@@ -157,6 +157,9 @@
       <h3 style="margin-top:0">Contacto</h3>
       <p class="small">E‑mail: <a href="mailto:hi@brega.app" class="link">hi@brega.app</a></p>
       <p class="small">Teléfono / WhatsApp: +598 967 444 21</p>
+      <p class="small">RUT: 220517020014</p>
+      <p class="small">N° de Empresa: 0000008982125</p>
+      <p class="small">Jurisdicción: Uruguay</p>
     </div>
 
   </div>
