--- a/pay.html
+++ b/pay.html
@@ -166,7 +166,7 @@
 </body>
   <footer>
     </div>
-    <p>© <span id="year"></span> <a href="www.brega.app" class="link">Brega.app</a> con Mercado Pago en Uruguay — <a href="mailto:hi@brega.app">hi@brega.app</a></p>
+    <p>© <span id="year"></span> <a href="index/html" class="link">Brega.app</a> con Mercado Pago en Uruguay — <a href="mailto:hi@brega.app">hi@brega.app</a></p>
       <div style="font-size:13px;color:var(--muted);margin-top:6px">
     Al hacer clic en «Pagar» aceptas nuestra 
     <a href="/refund-es.html" class="link">política de reembolso</a> y 
