--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
     </div>
 
     <section>
+            <img src="public/img/down_ornament.png" class="orn" alt="adorno de cabecera" onerror="this.style.display='none'"/>
       <h2>¿Por qué Brega?</h2>
       <div class="features">
         <div class="card">
