--- a/terms-es.html
+++ b/terms-es.html
@@ -102,7 +102,7 @@
 
   <footer>
     </div>
-    <p>© <span id="year"></span> <a href="index/html" class="link">Brega.app</a> con Mercado Pago en Uruguay — <a href="mailto:hi@brega.app">hi@brega.app</a></p>
+    <p>© <span id="year"></span> <a href="index.html" class="link">Brega.app</a> con Mercado Pago en Uruguay — <a href="mailto:hi@brega.app">hi@brega.app</a></p>
       <div style="font-size:13px;color:var(--muted);margin-top:6px">
     <a href="/refund-es.html" class="link">política de reembolso</a> y 
     <a href="/terms-es.html" class="link">términos de uso</a>.
