--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <a href="#"><img src="/public/img/mp.png" alt="MP"></a>
       <a href="#"><img src="/public/img/llogo.png" alt="LLogo"></a>
     </div>
-    <p>© <span id="year"></span> <a href="index/html" class="link">Brega.app</a> con Mercado Pago en Uruguay — <a href="mailto:hi@brega.app">hi@brega.app</a></p>
+    <p>© <span id="year"></span> <a href="index.html" class="link">Brega.app</a> con Mercado Pago en Uruguay — <a href="mailto:hi@brega.app">hi@brega.app</a></p>
       <div style="font-size:13px;color:var(--muted);margin-top:6px">
     Al hacer clic en «Pagar» aceptas nuestra 
     <a href="/refund-es.html" class="link">política de reembolso</a> y 
