--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
       width:100%; height:300px; border:0;
       border-radius:14px; box-shadow:0 4px 18px rgba(0,0,0,0.1);
     }
+    .orn {
+  display: block;
+  max-width: 100%;   /* ограничиваем по ширине контейнера */
+  height: auto;      /* сохраняем пропорции */
+  margin: 12px auto; /* центрируем */
+}
 
     section { max-width:900px; margin:40px auto; padding:0 20px; text-align:center; }
     .features {
