--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="es">
-<head>
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Brega — Encuentra tu aventura en el mar</title>
@@ -32,7 +32,16 @@
   </style>
 </head>
 <body>
+<head>
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5CTTBJDRW8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-5CTTBJDRW8');
+</script>
   <div class="lang-selector">
     <span>Seleccione idioma:</span>
     <img src="public/img/flags/es.png" alt="Español" onclick="setLanguage('es')">
